# ab-test-calculator

./: .gitignore  GUIDE.md  README.md  example_notebook.ipynb  pyproject.toml  run_example.py
_extras/: requirements.txt  visualize_alpha_beta.py
ab_test_calc/: __init__.py  cli.py  core.py  report.py  validation.py
tests/: __init__.py  test_ab_calc.py
