[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-test-calc"
version = "1.0.0"
description = "A/B test sample size calculator with support for proportions, means, and advanced designs"
readme = "GUIDE.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Anton K."}
]
keywords = [
    "ab-testing",
    "sample-size",
    "statistics",
    "power-analysis",
    "experiment-design",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.5.0",
]

[project.scripts]
ab-test-calc = "ab_test_calc.cli:main"

[project.urls]
Homepage = "https://github.com/antonk/ab-test-calc"
Documentation = "https://github.com/antonk/ab-test-calc#readme"
Issues = "https://github.com/antonk/ab-test-calc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ab_test_calc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ab_test_calc"]

[tool.coverage.run]
source = ["ab_test_calc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
